--- a/render_bias.html
+++ b/render_bias.html
@@ -48,7 +48,7 @@
       </canvas><canvas width="100" height="60" style="width: 128px; height:80px; display: none;">
       </canvas><canvas width="100" height="60" style="width: 128px; height: 80px; display: none;"></canvas>
     </div> -->
-    <div id="info" style="position:absolute; top:400px; font-size: 40px;">
+    <div id="info" style="position:absolute; top:600px; font-size: 40px;left:36%;">
       <div id="fpsdisplay"></div>
       <div id="sizedisplay"></div>
   </div>
@@ -72,8 +72,8 @@
     // const BASE =
     //   "https://huggingface.co/ashawkey/nerf2mesh/resolve/main/scenes/"; // remote
     //   "https://huggingface.co/ashawkey/nerf2mesh"; // remote
-    // const BASE = "../"; // local
-    const BASE="https://huggingface.co/xiongdi/maskngp/resolve/main/scenes/";
+    const BASE = "../"; // local
+    // const BASE="https://huggingface.co/xiongdi/maskngp/resolve/main/scenes/";
     // const BASE = "https://huggingface.co/xiongdi/maskngp/resolve/main/scenes/";// local
 
 
