--- a/render_bias.html
+++ b/render_bias.html
@@ -997,8 +997,8 @@ void main() {
               );
 
               let dirmap = new THREE.TextureLoader().load(
-                // BASE + name + "/dirmap" + ".png",
-                BASE + name + "/roll_0" + ".png",
+                BASE + name + "/dirmap" + ".png",
+                // BASE + name + "/roll_0" + ".png",
                 (object) => {
                   console.log("[INFO] loaded dirmap texture", BASE + name + "/dirmap" + ".png");
                   updateProgressBar(name, 2);
