--- a/reframe.html
+++ b/reframe.html
@@ -79,7 +79,7 @@
               </div>
               <!-- link to code -->
               <div style="margin: 5px;">
-                <p class="mb-5"><a class="btn btn-large btn-dark" href="https://www.reframe.pub/reframe" role="button" target="_blank">
+                <p class="mb-5"><a class="btn btn-large btn-dark" href="https://github.com/asimfish/reframe" role="button" target="_blank">
                 <i class="fa fa-github-alt"></i> 
                 Code 
                 </a> </p>
