--- a/reframe.html
+++ b/reframe.html
@@ -135,10 +135,10 @@
             <table style="table-layout: fixed;">
               <tbody>
                 <tr>
-                  <td width="25%"> <a href="render_bias.html?scene=helmet" style="text-decoration: none"> <img src="./images/helmet.jpg" alt="helmet" class="img-responsive" width="100%"/> <b>helmet</b> </a> </td>
-                  <td width="25%"> <a href="render_bias.html?scene=car" style="text-decoration: none"> <img src="./images/car.jpg" alt="car" class="img-responsive" width="100%"/> <b>car</b> </a> </td>
-                  <td width="25%"> <a href="render_bias.html?scene=coffee" style="text-decoration: none"> <img src="./images/coffee.jpg" alt="coffee" class="img-responsive" width="100%"/> <b>coffee</b> </a> </td>
-                  <td width="25%"> <a href="render_bias.html?scene=toaster" style="text-decoration: none"> <img src="./images/toaster.jpg" alt="toaster" class="img-responsive" width="100%"/> <b>toaster</b> </a> </td>
+                  <td width="25%"> <a href="render_bias.html?scene=helmet" style="text-decoration: none"> <img src="./images/helmet.png" alt="helmet" class="img-responsive" width="100%"/> <b>helmet</b> </a> </td>
+                  <td width="25%"> <a href="render_bias.html?scene=car" style="text-decoration: none"> <img src="./images/car.png" alt="car" class="img-responsive" width="100%"/> <b>car</b> </a> </td>
+                  <td width="25%"> <a href="render_bias.html?scene=coffee" style="text-decoration: none"> <img src="./images/coffee.png" alt="coffee" class="img-responsive" width="100%"/> <b>coffee</b> </a> </td>
+                  <td width="25%"> <a href="render_bias.html?scene=toaster" style="text-decoration: none"> <img src="./images/toaster.png" alt="toaster" class="img-responsive" width="100%"/> <b>toaster</b> </a> </td>
                   <!-- <td width="25%"> <a href="render_bias2.html?scene=helmet" style="text-decoration: none"> <img src="./images/helmet.jpg" alt="helmet" class="img-responsive" width="100%"/> <b>helmet2</b> </a> </td> -->
                   <!-- <td width="50%"> <a href="render_bias6DoF.html?scene=helmet" style="text-decoration: none"> <img src="./images/helmet.jpg" alt="helmet" class="img-responsive" width="25%"/> <b>helmet</b> </a> </td> -->
                   <!-- <td width="25%"> <a href="render_ship.html?scene=ship" style="text-decoration: none"> <img src="../images/ship.jpg" alt="ship" class="img-responsive" width="100%"/> <b>Ship</b> </a> </td> -->
@@ -151,20 +151,42 @@
                 <table style="table-layout: fixed;">
                   <tbody>
 
-                    <td width="25%"> <a href="render_bias.html?scene=chair" style="text-decoration: none"> <img src="./images/chair.jpg" alt="chair" class="img-responsive" width="100%"/> <b>Chair</b> </a> </td>
-                    <td width="25%"> <a href="render_bias.html?scene=drums" style="text-decoration: none"> <img src="./images/drums.jpg" alt="drums" class="img-responsive" width="100%"/> <b>Drums</b> </a> </td>
-                    <td width="25%"> <a href="render_bias.html?scene=ficus" style="text-decoration: none"> <img src="./images/ficus.jpg" alt="ficus" class="img-responsive" width="100%"/> <b>Ficus</b> </a> </td>
-                    <td width="25%"> <a href="render_bias.html?scene=hotdog" style="text-decoration: none"> <img src="./images/hotdog.jpg" alt="hotdog" class="img-responsive" width="100%"/> <b>Hotdog</b> </a> </td>
+                    <td width="25%"> <a href="render_bias.html?scene=chair" style="text-decoration: none"> <img src="./images/chair.png" alt="chair" class="img-responsive" width="100%"/> <b>Chair</b> </a> </td>
+                    <td width="25%"> <a href="render_bias.html?scene=drums" style="text-decoration: none"> <img src="./images/drums.png" alt="drums" class="img-responsive" width="100%"/> <b>Drums</b> </a> </td>
+                    <td width="25%"> <a href="render_bias.html?scene=ficus" style="text-decoration: none"> <img src="./images/ficus.png" alt="ficus" class="img-responsive" width="100%"/> <b>Ficus</b> </a> </td>
+                    <td width="25%"> <a href="render_bias.html?scene=hotdog" style="text-decoration: none"> <img src="./images/hotdog.png" alt="hotdog" class="img-responsive" width="100%"/> <b>Hotdog</b> </a> </td>
                     <!-- <td width="25%"> <a href="render.html?scene=6DoF" style="text-decoration: none"> <img src="../images/6DoF.png" alt="6DoF" class="img-responsive" width="100%"/> <b>6DoF(Click me)</b> </a> </td> -->
                   </tr>
                   <tr>
-                    <td width="25%"> <a href="render_bias.html?scene=lego" style="text-decoration: none"> <img src="./images/lego.jpg" alt="lego" class="img-responsive" width="100%"/> <b>Lego</b> </a> </td>
-                    <td width="25%"> <a href="render_bias.html?scene=materials" style="text-decoration: none"> <img src="./images/materials.jpg" alt="materials" class="img-responsive" width="100%"/> <b>Materials</b> </a> </td>
-                    <td width="25%"> <a href="render_bias.html?scene=mic" style="text-decoration: none"> <img src="./images/mic.jpg" alt="mic" class="img-responsive" width="100%"/> <b>Mic</b> </a> </td>
-                    <td width="25%"> <a href="render_bias.html?scene=ship" style="text-decoration: none"> <img src="./images/ship.jpg" alt="ship" class="img-responsive" width="100%"/> <b>Ship</b> </a> </td>
+                    <td width="25%"> <a href="render_bias.html?scene=lego" style="text-decoration: none"> <img src="./images/lego.png" alt="lego" class="img-responsive" width="100%"/> <b>Lego</b> </a> </td>
+                    <td width="25%"> <a href="render_bias.html?scene=materials" style="text-decoration: none"> <img src="./images/materials.png" alt="materials" class="img-responsive" width="100%"/> <b>Materials</b> </a> </td>
+                    <td width="25%"> <a href="render_bias.html?scene=mic" style="text-decoration: none"> <img src="./images/mic.png" alt="mic" class="img-responsive" width="100%"/> <b>Mic</b> </a> </td>
+                    <td width="25%"> <a href="render_bias.html?scene=ship" style="text-decoration: none"> <img src="./images/ship.png" alt="ship" class="img-responsive" width="100%"/> <b>Ship</b> </a> </td>
                   </tr>
                 </tbody>
             </table>
+
+            <!-- <br> <h4> <b>NeRF-synthetic</b> </h4>
+            <table style="table-layout: fixed;"> -->
+                <br> <h4> <b>Real-capture</b> </h4>
+                <table style="table-layout: fixed;">
+                  <tbody>
+
+                    <td width="31%"> <a href="render_bias.html?scene=gardensphere" style="text-decoration: none"> <img src="./images/gardensphere.png" alt="gardensphere" class="img-responsive" width="100%"/> <b>Gardensphere</b> </a> </td>
+                    <td width="36%"> <a href="render_bias.html?scene=sedan" style="text-decoration: none"> <img src="./images/sedan.png" alt="sedan" class="img-responsive" width="100%"/> <b>Sedan</b> </a> </td>
+                    <td width="31%"> <a href="render_bias.html?scene=toycar" style="text-decoration: none"> <img src="./images/toycar.png" alt="toycar" class="img-responsive" width="100%"/> <b>Toycar</b> </a> </td>
+                    <!-- <td width="25%"> <a href="render_bias.html?scene=hotdog" style="text-decoration: none"> <img src="./images/hotdog.png" alt="hotdog" class="img-responsive" width="100%"/> <b>Hotdog</b> </a> </td> -->
+                    <!-- <td width="25%"> <a href="render.html?scene=6DoF" style="text-decoration: none"> <img src="../images/6DoF.png" alt="6DoF" class="img-responsive" width="100%"/> <b>6DoF(Click me)</b> </a> </td> -->
+                  </tr>
+                  <!-- <tr>
+                    <td width="25%"> <a href="render_bias.html?scene=lego" style="text-decoration: none"> <img src="./images/lego.png" alt="lego" class="img-responsive" width="100%"/> <b>Lego</b> </a> </td>
+                    <td width="25%"> <a href="render_bias.html?scene=materials" style="text-decoration: none"> <img src="./images/materials.png" alt="materials" class="img-responsive" width="100%"/> <b>Materials</b> </a> </td>
+                    <td width="25%"> <a href="render_bias.html?scene=mic" style="text-decoration: none"> <img src="./images/mic.png" alt="mic" class="img-responsive" width="100%"/> <b>Mic</b> </a> </td>
+                    <td width="25%"> <a href="render_bias.html?scene=ship" style="text-decoration: none"> <img src="./images/ship.png" alt="ship" class="img-responsive" width="100%"/> <b>Ship</b> </a> </td>
+                  </tr> -->
+                </tbody>
+            </table>
+
 
             <!-- <br> <h4> <b>Open-real360</b> </h4>
                   <table style="table-layout: fixed;">
