--- a/render_bias.html
+++ b/render_bias.html
@@ -48,7 +48,7 @@
       </canvas><canvas width="100" height="60" style="width: 128px; height:80px; display: none;">
       </canvas><canvas width="100" height="60" style="width: 128px; height: 80px; display: none;"></canvas>
     </div> -->
-    <div id="info" style="position:absolute; top:600px; font-size: 40px;left:36%;">
+    <div id="info" style="position:absolute; top:85%; font-size: 40px;left:45%;">
       <div id="fpsdisplay"></div>
       <div id="sizedisplay"></div>
   </div>
@@ -422,7 +422,7 @@ void main() {
         vec3 tmp = vec3(2.0,2.0,2.0);
         vec3 Wdir = -1.0*((tmp * Ndir * normal_map_) - Dir);
         // Wdir = Wdir.rgb;
-        vec2 degree_xyz = dir2polar(Wdir);
+        vec2 degree_xyz = dir2polar(Wdir.grb);
         float degree_xy = degree_xyz.x;
         float degree_z = degree_xyz.y;
 
