--- a/reframe.html
+++ b/reframe.html
@@ -172,9 +172,9 @@
                 <table style="table-layout: fixed;">
                   <tbody>
 
-                    <td width="31%"> <a href="render_bias.html?scene=gardensphere" style="text-decoration: none"> <img src="./images/gardensphere.png" alt="gardensphere" class="img-responsive" width="100%"/> <b>Gardensphere</b> </a> </td>
-                    <td width="36%"> <a href="render_bias.html?scene=sedan" style="text-decoration: none"> <img src="./images/sedan.png" alt="sedan" class="img-responsive" width="100%"/> <b>Sedan</b> </a> </td>
-                    <td width="31%"> <a href="render_bias.html?scene=toycar" style="text-decoration: none"> <img src="./images/toycar.png" alt="toycar" class="img-responsive" width="100%"/> <b>Toycar</b> </a> </td>
+                    <td width="31%"> <a href="render_gardem.html?scene=gardensphere" style="text-decoration: none"> <img src="./images/gardensphere.png" alt="gardensphere" class="img-responsive" width="100%"/> <b>Gardensphere</b> </a> </td>
+                    <td width="36%"> <a href="render_sedan.html?scene=sedan" style="text-decoration: none"> <img src="./images/sedan.png" alt="sedan" class="img-responsive" width="100%"/> <b>Sedan</b> </a> </td>
+                    <td width="31%"> <a href="render_toycar.html?scene=toycar" style="text-decoration: none"> <img src="./images/toycar.png" alt="toycar" class="img-responsive" width="100%"/> <b>Toycar</b> </a> </td>
                     <!-- <td width="25%"> <a href="render_bias.html?scene=hotdog" style="text-decoration: none"> <img src="./images/hotdog.png" alt="hotdog" class="img-responsive" width="100%"/> <b>Hotdog</b> </a> </td> -->
                     <!-- <td width="25%"> <a href="render.html?scene=6DoF" style="text-decoration: none"> <img src="../images/6DoF.png" alt="6DoF" class="img-responsive" width="100%"/> <b>6DoF(Click me)</b> </a> </td> -->
                   </tr>
