--- a/reframe.html
+++ b/reframe.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>
-    REFRAME
+    REFRAME: Reflective Real-time Rendering with Memory-Efficient Mesh
   </title>
 
 
@@ -40,7 +40,7 @@
           <div class="col">
             <!-- paper title -->
             <h2 style="font-size:30px;">
-              REFRAME
+              REFRAME: Reflective Real-time Rendering with Memory-Efficient Mesh
             </h2>
             
             <!-- publication -->
@@ -78,19 +78,19 @@
                 <!-- </a> </p> -->
               </div>
               <!-- link to code -->
-              <div style="margin: 5px;">
+              <!-- <div style="margin: 5px;">
                 <p class="mb-5"><a class="btn btn-large btn-dark" href="https://github.com/asimfish/reframe" role="button" target="_blank">
                 <i class="fa fa-github-alt"></i> 
                 Code 
                 </a> </p>
-              </div>
+              </div> -->
               <!-- link to models -->
-              <div style="margin: 5px;">
+              <!-- <div style="margin: 5px;">
                 <p class="mb-5"><a class="btn btn-large btn-dark" href="https://huggingface.co/xiongdi/maskngp" role="button" target="_blank">
                 <i class="fa fa-database"></i> 
                 Models 
                 </a> </p>
-              </div>
+              </div> -->
             </div>
 
           </div>
@@ -212,7 +212,7 @@
                     <td width="25%"> <a href="render_6DOF.html?scene=6DoF" style="text-decoration: none"> <img src="../images/6DoF.png" alt="6DoF" class="img-responsive" width="100%"/> <b>6DoF(Click me)</b> </a> </td>
                   </tr> -->
               </tbody>
-            </table> -->
+            </table> 
 
             <!-- <br> <h4><b>Human</b></h4>
             <table style="table-layout: fixed;">
@@ -220,8 +220,8 @@
                 <tr>
                   <td width="25%"> <a href="render_bias6DoF.html?scene=6DoF" style="text-decoration: none"> <img src="./images/6DoF.png" alt="6DoF" class="img-responsive" width="25%"/> <b>6DoF</b> </a> </td>
                   <td width="25%"> <a href="render_bias6DoF.html?scene=6DoF" style="text-decoration: none"> <img src="./images/6DoF.png" alt="6DoF" class="img-responsive" width="25%"/> <b>6DoF</b> </a> </td>
-                  <!-- <td width="25%"> <a href="render_ship.html?scene=ship" style="text-decoration: none"> <img src="../images/ship.jpg" alt="ship" class="img-responsive" width="100%"/> <b>Ship</b> </a> </td> -->
-                <!-- </tr> --> -->
+                - <td width="25%"> <a href="render_ship.html?scene=ship" style="text-decoration: none"> <img src="../images/ship.jpg" alt="ship" class="img-responsive" width="100%"/> <b>Ship</b> </a> </td> -->
+                <!-- </tr> --> 
 
               <!-- </tbody> -->
             <!-- </table> -->
@@ -239,7 +239,7 @@
         <h3>Citation</h3>
         <hr style="margin-top:0px">
         <pre style="background-color: #e9eeef;padding: 1.25em 1.5em">
-<code>REFRAME
+<code>REFRAME: Reflective Real-time Rendering with Memory-Efficient Mesh
 </code></pre>
       </div>
     </div>
